Fix full-dark not covers search textbox

--- a/app/javascript/styles/full-dark/diff.scss
+++ b/app/javascript/styles/full-dark/diff.scss
@@ -1,4 +1,6 @@
 input[type='text'],
+input[type='search'],
+input[type='number'],
 input:not([type]),
 textarea {
   background: $ui-base-color !important;
